// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas sobre GifExpertApp GifExpertApp 1`] = `
<Fragment>
  <div
    className="title-wrapper"
  >
    <h2
      className="app-title"
    >
       Giff App 
    </h2>
    <hr />
  </div>
  <AddCategory
    setCategories={[Function]}
  />
  <ol />
</Fragment>
`;

exports[`Pruebas sobre GifExpertApp debe mostrar una lista de categorías 1`] = `
<Fragment>
  <div
    className="title-wrapper"
  >
    <h2
      className="app-title"
    >
       Giff App 
    </h2>
    <hr />
  </div>
  <AddCategory
    setCategories={[Function]}
  />
  <ol>
    <GifGrid
      category="Snoopy"
      key="Snoopy"
    />
    <GifGrid
      category="Charlie Brown"
      key="Charlie Brown"
    />
  </ol>
</Fragment>
`;
